// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
}

.c1:hover,
.c1:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  class="poodle-box c0 c1 c2"
>
  IconButton
</button>
`;

exports[`<IconButton /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
}

.c1:hover,
.c1:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

.c2 {
  margin-top: 20px;
}

<button
  class="poodle-box c0 c1 c2"
  id="id"
>
  IconButton
</button>
`;

exports[`<IconButton /> should render IconButton correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
}

.c1:hover,
.c1:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  class="poodle-box c0 c1 c2"
>
  IconButton
</button>
`;

exports[`<IconButton /> should render shape IconButton correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 4px;
}

.c1:hover,
.c1:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  class="poodle-box c0 c1 c2"
>
  IconButton
</button>
`;

exports[`<IconButton /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<button
  class="poodle-box c0 c1"
>
  IconButton
</button>
`;

exports[`<IconButton /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c1:hover,
.c1:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  class="poodle-box c0 c1 c2"
>
  IconButton
</button>
`;

exports[`<IconButton /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c1:hover,
.c1:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  class="poodle-box c0 c1 c2"
>
  IconButton
</button>
`;

exports[`<IconButton /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<button
  class="poodle-box c0 morning c1"
>
  IconButton
</button>
`;

exports[`<IconButton /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

<button
  class="poodle-box c0 c1 c2"
>
  IconButton
</button>
`;

exports[`<IconButton /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 0;
  padding: 8px;
  pointer-events: initial;
  font-size: 1.5rem;
  color: #282828;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-transition: background-color 220ms ease-in,color 220ms ease-in;
  transition: background-color 220ms ease-in,color 220ms ease-in;
  border-radius: 50%;
}

.c1:hover,
.c1:focus {
  color: #282828;
  background-color: #E0E0E0;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  class="poodle-box c0 c1 hello c2"
  id="id"
>
  IconButton
</button>
`;
